--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/21_blenderbananapancakes/21_32.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/21_blenderbananapancakes/21_32.yaml
@@ -17,7 +17,7 @@ step_annotations:
 - description: Chop-Chop 1 strawberry
   end_time: 216.815
   errors:
-  - description: Didn't wash the strawberry.
+  - description: Use soiled strawberry.
     tag: Preparation Error
   modified_description: Chop-Chop 1 unwashed strawberry
   start_time: 175.225
@@ -35,18 +35,27 @@ step_annotations:
   end_time: 399.007
   errors:
   - description: Not using a proper frying pan.
-    tag: Technique Error
+    tag: Preparation Error
   modified_description: Pour-Pour three little puddles straight from the blender into
     the tawa pan
   start_time: 326.395
   step_id: 231
+- description: Cook-Cook for 1 min or until the tops start to bubble
+  end_time: 453
+  errors:
+  - description: Did not cook for required time.
+    tag: Timing Error
+  start_time: 380
+  step_id: 226
 - description: Flip-Flip the pancakes with a fork or a fish slice spatula
   end_time: 469.298
   errors:
-  - description: Flipping early before the pan cakes gets settled.
+  - description: Did not flip entire pancake but only half of it.
+    tag: Technique Error
+  - description: Not using a fork or a fish slice spatula to flip the pancakes
     tag: Preparation Error
   modified_description: Flip-Flip the pancakes with a spatula too early.
-  start_time: 415.286
+  start_time: 453
   step_id: 228
 - description: cook-cook for 20-30 seconds more
   end_time: 500.744
@@ -71,9 +80,9 @@ step_annotations:
 - description: Melt-Melt a small knob of butter in a non-stick frying pan over low-medium
     heat
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 223
-- description: Cook-Cook for 1 min or until the tops start to bubble
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 226
