--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/21_blenderbananapancakes/21_37.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/21_blenderbananapancakes/21_37.yaml
@@ -5,9 +5,8 @@ step_annotations:
 - description: Add-1 egg to a blender
   end_time: 57.23440652866242
   errors:
-  - description: Add 1 already broken egg to a blender
-    tag: Preparation Error
-  modified_description: Add-1 broken egg to a blender
+  - description: Spill while adding egg to a blender and dropping egg shell into blender
+    tag: Technique Error
   start_time: 8.671879777070064
   step_id: 229
 - description: Add-Add 1 banana to a blender
@@ -54,14 +53,15 @@ step_annotations:
   step_id: 231
 - description: Cook-Cook for 1 min or until the tops start to bubble
   end_time: 919.2192563694268
-  errors:
-  - description: Cook until it's solid
-    tag: Timing Error
-  modified_description: Cook for until it's solid
   start_time: 561.9378095541401
   step_id: 226
 - description: Flip-Flip the pancakes with a fork or a fish slice spatula
   end_time: 969.5161590764333
+  errors:
+  - description: Not using a fork or a fish slice spatula to flip the pancakes
+    tag: Preparation Error
+  - description: Did not flip the entire puddle at once
+    tag: Technique Error
   start_time: 917.4848804140128
   step_id: 228
 - description: cook-cook for 20-30 seconds more
@@ -78,9 +78,17 @@ step_annotations:
   step_id: 224
 - description: Chop-Chop 1 strawberry
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 233
 - description: Serve-Serve the pancakes with chopped strawberries
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 222
