--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/21_blenderbananapancakes/21_44.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/21_blenderbananapancakes/21_44.yaml
@@ -31,7 +31,7 @@ step_annotations:
   errors:
   - description: Spill some maple syrup.
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed before making pancakes
     tag: Order Error
   modified_description: splash-splash maple syrup on plate and spill some.
   start_time: 317.0449128980892
@@ -41,6 +41,8 @@ step_annotations:
   errors:
   - description: Instead of full banana adding half.
     tag: Measurement Error
+  - description: Step performed after adding maple syrup to the plate
+    tag: Order Error
   modified_description: Add-Add 1/2 banana to a blender.
   start_time: 354.9689455414013
   step_id: 225
@@ -49,6 +51,8 @@ step_annotations:
   errors:
   - description: Blitzing the blender for more than 20 seconds.
     tag: Timing Error
+  - description: Step performed after adding maple syrup to the plate and before adding egg.
+    tag: Order Error
   modified_description: Blitz-Blitz the blender for 30 seconds.
   start_time: 398.9608234076434
   step_id: 227
@@ -58,7 +62,7 @@ step_annotations:
   errors:
   - description: Using a steel pan instead of a non-stick pan.
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed after adding maple syrup to the plate and before adding egg.
     tag: Order Error
   modified_description: Melt-Melt a small knob of butter in a steel frying pan over
     low-medium heat
@@ -68,23 +72,25 @@ step_annotations:
     pan
   end_time: 712.9718136942676
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding maple syrup to the plate and before adding egg.
     tag: Order Error
+  - description: Spooned the content instead of pouring.
+    tag: Technique Error
   start_time: 655.3272840764331
   step_id: 231
 - description: Cook-Cook for 1 min or until the tops start to bubble
   end_time: 785.7859563694268
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding maple syrup to the plate and before adding egg.
     tag: Order Error
   start_time: 726.6244654458599
   step_id: 226
 - description: Flip-Flip the pancakes with a fork or a fish slice spatula
   end_time: 819.1591050955415
   errors:
-  - description: While flipping put one out of the pan.
+  - description: Flipped a pancake outside the pan instead of inside.
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed after adding maple syrup to the plate and before adding egg.
     tag: Order Error
   modified_description: Flip-Flip the pancakes with a fork or a fish slice spatula
     and drop one out of the pan.
@@ -93,28 +99,32 @@ step_annotations:
 - description: cook-cook for 20-30 seconds more
   end_time: 855.5661764331211
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding maple syrup to the plate and before adding egg.
     tag: Order Error
   start_time: 816.1251824840765
   step_id: 230
 - description: Transfer-Transfer to a plate
   end_time: 878.3205960191083
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding maple syrup to the plate and before adding egg.
     tag: Order Error
   start_time: 852.5322538216561
   step_id: 234
 - description: Serve-Serve the pancakes with chopped strawberries
   end_time: 907.1428608280254
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after adding maple syrup to the plate and before adding egg.
     tag: Order Error
+  - description: Did not add all the chopped strawberries.
+    tag: Technique Error
   start_time: 878.3205960191083
   step_id: 222
 - description: Add-1 egg to a blender
   end_time: 946.5838547770701
   errors:
-  - description: Step performed after correct order
+  - description: Step performed after doing everything.
     tag: Order Error
+  - description: Using a soiled and broken egg.
+    tag: Preparation Error
   start_time: 907.1428608280254
   step_id: 229
