--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/22_herbomeletwithfriedtomatoes/22_37.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/22_herbomeletwithfriedtomatoes/22_37.yaml
@@ -15,7 +15,7 @@ step_annotations:
   errors:
   - description: Not using a proper frying pan.
     tag: Preparation Error
-  - description: Step performed before correct order
+  - description: Step performed before beating the egg mixture
     tag: Order Error
   modified_description: Heat-Heat 1 tbsp oil in a big tawa pan.
   start_time: 87.255
@@ -25,32 +25,41 @@ step_annotations:
   errors:
   - description: Using a cherry tomato instead of a Tomato.
     tag: Preparation Error
+  - description: Step performed after heating the pan
+    tag: Order Error
   modified_description: Take-Take a cherry tomato.
   start_time: 112.70400000000001
   step_id: 247
 - description: Cut-Cut tomato into two pieces
   end_time: 145.856
+  errors:
+  - description: Step performed after heating the pan
+    tag: Order Error
+  - description: Using a cherry tomato instead of a tomato.
+    tag: Preparation Error
   start_time: 135.003
   step_id: 246
 - description: cook-cook the tomatoes cut-side down until they start to soften and
     colour
   end_time: 333.201
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before beating the egg mixture
     tag: Order Error
+  - description: Using a cherry tomato instead of a tomato.
+    tag: Preparation Error
   start_time: 145.993
   step_id: 240
 - description: crack-crack one egg in a bowl
   end_time: 220.075
   errors:
-  - description: Step performed after correct order
+  - description: Step performed after cooking the tomatoes
     tag: Order Error
   start_time: 193.313
   step_id: 239
 - description: Beat-Beat the contents of the bowl
   end_time: 306.702
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after cooking the tomatoes and before adding cilantro to the bowl
     tag: Order Error
   start_time: 253.035
   step_id: 248
@@ -58,16 +67,15 @@ step_annotations:
   end_time: 356.174
   errors:
   - description: Not using a proper item for scooping.
-    tag: Technique Error
-  - description: Step performed before correct order
+    tag: Preparation Error
+  - description: Step performed before adding cilantro to the bowl
     tag: Order Error
-  modified_description: ' Scoop-Scoop the tomatoes from the pan using a spatula.'
   start_time: 335.084
   step_id: 244
 - description: put-put tomatoes on a serving plate
   end_time: 360.132
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding cilantro to the bowl
     tag: Order Error
   modified_description: put-put tomatoes on a serving plate
   start_time: 352.375
@@ -75,15 +83,12 @@ step_annotations:
 - description: add-add the chopped cilantro to the bowl
   end_time: 394.003
   errors:
-  - description: Step performed after correct order
+  - description: Step performed after cooking the tomatoes
     tag: Order Error
   start_time: 371.205
   step_id: 242
 - description: Pour-Pour the egg mixture into the pan
   end_time: 412.508
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 394.824
   step_id: 241
 - description: stir-stir gently with a wooden spoon so the egg that sets on the base
@@ -93,23 +98,17 @@ step_annotations:
   - description: Using wooden spatula instead of a spoon and not properly stirring
       the contents.
     tag: Preparation Error
-  - description: Step performed before correct order
-    tag: Order Error
+  - description: Stirring action is not correct
+    tag: Technique Error
   modified_description: Stir-Stir improperly with a wooden spatula.
   start_time: 432.235
   step_id: 238
 - description: Stop-Stop stirring when it's nearly cooked to allow it to set into
     an omelette
   end_time: 525.258
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 520.092
   step_id: 245
 - description: Transfer-Transfer omelette to the plate and serve with the tomatoes
   end_time: 552.154
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 530.297
   step_id: 243
