--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/22_herbomeletwithfriedtomatoes/22_137.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/22_herbomeletwithfriedtomatoes/22_137.yaml
@@ -15,7 +15,7 @@ step_annotations:
   errors:
   - description: Using a big frying pan.
     tag: Preparation Error
-  - description: Step performed before correct order
+  - description: Step performed before preparing egg mixture
     tag: Order Error
   modified_description: Heat-Heat 1 tbsp oil in a big frying pan.
   start_time: 273.81
@@ -25,107 +25,99 @@ step_annotations:
   errors:
   - description: Using a cherry tomato instead of a tomato.
     tag: Preparation Error
+  - description: Step performed after heating the pan
+    tag: Order Error
   modified_description: Take-Take a cherry tomato.
   start_time: 338.305
   step_id: 247
 - description: Cut-Cut tomato into two pieces
   end_time: 380.807
+  errors:
+  - description: Using a cherry tomato instead of a tomato.
+    tag: Preparation Error
+  - description: Step performed after heating the pan
+    tag: Order Error
   start_time: 373.006
   step_id: 246
-- description: cook-cook the tomatoes cut-side down until they start to soften and
-    colour
+- description: cook-cook the tomatoes cut-side down until they start to soften and colour
   end_time: 679.668
   errors:
-  - description: Step performed before correct order
+  - description: Using a cherry tomato instead of a tomato.
+    tag: Preparation Error
+  - description: Step performed before preparing egg mixture
     tag: Order Error
   start_time: 392.298
   step_id: 240
 - description: crack-crack one egg in a bowl
   end_time: 619.27
   errors:
-  - description: Step performed after correct order
+  - description: Step performed after cooking tomatoes
     tag: Order Error
   start_time: 529.422
   step_id: 239
 - description: Beat-Beat the contents of the bowl
   end_time: -1.0
   errors:
-  - description: Didn't do the step.
+  - description: Skipped this step
     tag: Missing Step
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Didn't do the step.
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 248
 - description: Scoop-Scoop the tomatoes from the pan
   end_time: -1.0
   errors:
-  - description: Didn't do the step.
+  - description: Skipped this step
     tag: Missing Step
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Didn't do the step.
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 244
 - description: put-put tomatoes on a serving plate
   end_time: -1.0
   errors:
-  - description: Didn't do the step.
+  - description: Skipped this step
     tag: Missing Step
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Didn't do the step.
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 236
 - description: add-add the chopped cilantro to the bowl
   end_time: -1.0
   errors:
-  - description: Didn't do the step.
+  - description: Skipped this step
     tag: Missing Step
-  - description: Step performed after correct order
-    tag: Order Error
-  modified_description: Didn't do the step.
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 242
 - description: Pour-Pour the egg mixture into the pan
   end_time: -1.0
   errors:
-  - description: Didn't do the step.
+  - description: Skipped this step
     tag: Missing Step
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Didn't do the step.
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 241
 - description: stir-stir gently with a wooden spoon so the egg that sets on the base
     of the pan moves to enable the uncooked egg to flow into the space
   end_time: -1.0
   errors:
-  - description: Didn't do the step.
+  - description: Skipped this step
     tag: Missing Step
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Didn't do the step.
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 238
 - description: Stop-Stop stirring when it's nearly cooked to allow it to set into
     an omelette
   end_time: -1.0
   errors:
-  - description: Didn't do the step.
+  - description: Skipped this step
     tag: Missing Step
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Didn't do the step.
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 245
 - description: Transfer-Transfer omelette to the plate and serve with the tomatoes
   end_time: -1.0
   errors:
-  - description: Didn't do the step.
+  - description: Skipped this step
     tag: Missing Step
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: Didn't do the step.
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 243
