--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/22_herbomeletwithfriedtomatoes/22_38.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/22_herbomeletwithfriedtomatoes/22_38.yaml
@@ -11,6 +11,8 @@ step_annotations:
   errors:
   - description: splashing some part of the egg
     tag: Technique Error
+  - description: Using hand to scoop the liquid from the cutting board and placing it in the bowl
+    tag: Preparation Error
   modified_description: crack-crack one egg in a bowl, but splashing some part of
     the egg
   start_time: 52.16681871525097
@@ -20,7 +22,7 @@ step_annotations:
   errors:
   - description: not heat the oil
     tag: Temperature Error
-  - description: Step performed before correct order
+  - description: Step performed before preparing the egg mixture
     tag: Order Error
   modified_description: Heat-Put 1 tbsp oil in a small non-stick frying pan, but don't
     heat
@@ -31,7 +33,7 @@ step_annotations:
   errors:
   - description: Cut some small pieces, not two pieces
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed after heating the pan
     tag: Order Error
   modified_description: Cut-Cut tomato into some small pieces
   start_time: 284.97097984749036
@@ -41,7 +43,7 @@ step_annotations:
   errors:
   - description: 2 instead of 1/2
     tag: Measurement Error
-  - description: Step performed after correct order
+  - description: Step performed after heating the pan
     tag: Order Error
   modified_description: add-2 tsp ground black pepper to the bowl
   start_time: 333.24475238996143
@@ -51,7 +53,7 @@ step_annotations:
   errors:
   - description: very slow stir
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed before adding cilantro to the bowl
     tag: Order Error
   modified_description: Stir the contents of the bowl very slowly
   start_time: 377.62547875965254
@@ -61,7 +63,7 @@ step_annotations:
   errors:
   - description: Pour some part of the egg outside the pan
     tag: Technique Error
-  - description: Step performed before correct order
+  - description: Step performed before adding cilantro to the bowl and after heating the pan
     tag: Order Error
   modified_description: Pour-Pour the egg mixture into the pan, but some part of the
     egg is outside
@@ -73,7 +75,7 @@ step_annotations:
   errors:
   - description: just cook a little time
     tag: Timing Error
-  - description: Step performed before correct order
+  - description: Step performed before adding cilantro to the bowl
     tag: Order Error
   modified_description: cook-cook the tomatoes cut-side down for a little time
   start_time: 518.5537502142857
@@ -81,7 +83,7 @@ step_annotations:
 - description: Scoop-Scoop the tomatoes from the pan
   end_time: 631.4520892249036
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding cilantro to the bowl
     tag: Order Error
   modified_description: Pour the tomatoes from the pan
   start_time: 608.87242142278
@@ -89,7 +91,7 @@ step_annotations:
 - description: put-put tomatoes on a serving plate
   end_time: 636.9023538667955
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding cilantro to the bowl
     tag: Order Error
   start_time: 593.3002367316602
   step_id: 236
@@ -98,7 +100,7 @@ step_annotations:
   errors:
   - description: 1 instead of 2 tbsp
     tag: Measurement Error
-  - description: Step performed after correct order
+  - description: Step performed after cooking tomatoes in the pan
     tag: Order Error
   modified_description: Chop-Chop 1 tbsp cilantro
   start_time: 650.9173200888032
@@ -106,7 +108,7 @@ step_annotations:
 - description: add-add the chopped cilantro to the bowl
   end_time: 731.8926804826255
   errors:
-  - description: Step performed after correct order
+  - description: Step performed after cooking tomatoes in the pan
     tag: Order Error
   start_time: 710.0916219150579
   step_id: 242
@@ -116,24 +118,16 @@ step_annotations:
   errors:
   - description: stir rapidly
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
-  modified_description: stir-stir rapidly with a wooden spoon so the egg that sets
-    on the base of the pan moves to enable the uncooked egg to flow into the space
+  - description: Stir after cooking is done
+    tag: Preparation Error
   start_time: 731.1140712480695
   step_id: 238
 - description: Stop-Stop stirring when it's nearly cooked to allow it to set into
     an omelette
   end_time: 769.2659237413128
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 756.029566753861
   step_id: 245
 - description: Transfer-Transfer omelette to the plate and serve with the tomatoes
   end_time: 788.7311546052124
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 767.7087052722009
   step_id: 243
