--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/23_broccolistirfry/23_26.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/23_broccolistirfry/23_26.yaml
@@ -60,10 +60,16 @@ step_annotations:
   step_id: 269
 - description: slice-slice mushrooms
   end_time: 539.5949916735196
+  errors:
+  - description: Did not remove the stem
+    tag: Preparation Error
   start_time: 502.53108509457235
   step_id: 259
 - description: slice-slice 1/3 of the bell pepper
   end_time: 587.8642653577302
+  errors:
+  - description: Did not remove the seeds
+    tag: Preparation Error
   start_time: 543.0427969366774
   step_id: 263
 - description: Whisk-Whisk the contents of bowl
@@ -133,9 +139,17 @@ step_annotations:
   step_id: 264
 - description: Add-Add 1/2 tablespoon minced ginger to the bowl
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 267
 - description: Add-Add broccoli to the skillet
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 265
