--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/23_broccolistirfry/23_32.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/23_broccolistirfry/23_32.yaml
@@ -2,42 +2,6 @@ activity_id: 23
 is_error: true
 recording_id: '23_32'
 step_annotations:
-- description: Add-Add 1 tablespoon honey to the bowl
-  end_time: 366.5622281044408
-  start_time: 312.7914057360197
-  step_id: 252
-- description: Take-Take 1 bell pepper
-  end_time: 630.8723267886513
-  errors:
-  - description: Take spoilt bell pepper
-    tag: Preparation Error
-  modified_description: Take-Take 1 bell pepper
-  start_time: 611.9389386307565
-  step_id: 271
-- description: Add-Add 1/8 cup soy sauce to the bowl
-  end_time: 299.91670178865127
-  errors:
-  - description: Add-Add 1/2 cup soy sauce to the bowl
-    tag: Measurement Error
-  modified_description: Add-Add 1/2 cup soy sauce to the bowl
-  start_time: 198.4337412623355
-  step_id: 250
-- description: Add-Add 1 teaspoon cornstarch to the bowl
-  end_time: 469.5598596833882
-  errors:
-  - description: Spill while measuring the cornstarch
-    tag: Technique Error
-  modified_description: Add-Spill while adding 1 teaspoon cornstarch to the bowl
-  start_time: 424.1197281044408
-  step_id: 254
-- description: Take-Take 5 in number broccoli florets
-  end_time: 605.1229188939146
-  start_time: 500.6106162623355
-  step_id: 273
-- description: slice-slice 1/3 of the bell pepper
-  end_time: 670.2537741570723
-  start_time: 633.1443333675986
-  step_id: 263
 - description: Peel-Peel 2 cloves of garlic
   end_time: 158.29495836759872
   errors:
@@ -50,22 +14,72 @@ step_annotations:
   end_time: 193.13239257812498
   start_time: 161.32430047286184
   step_id: 269
+- description: Add-Add 1/8 cup soy sauce to the bowl
+  end_time: 299.91670178865127
+  errors:
+  - description: Add-Add 1/2 cup soy sauce to the bowl
+    tag: Measurement Error
+  modified_description: Add-Add 1/2 cup soy sauce to the bowl
+  start_time: 198.4337412623355
+  step_id: 250
+- description: Add-Add 1 tablespoon honey to the bowl
+  end_time: 366.5622281044408
+  errors:
+  - description: Added sweet and sour sauce instead of honey to the bowl
+    tag: Preparation Error
+  start_time: 312.7914057360197
+  step_id: 252
+- description: Take-Take 1 bell pepper
+  end_time: 630.8723267886513
+  errors:
+  - description: Take soiled bell pepper
+    tag: Preparation Error
+  modified_description: Take-Take 1 bell pepper
+  start_time: 611.9389386307565
+  step_id: 271
+- description: Add-Add 2 cloves minced garlic to the bowl
+  end_time: 373
+  errors:
+  - description: Added 2 cloves of garlic instead of 2 cloves minced garlic to the bowl
+    tag: Preparation Error
+  start_time: 369
+  step_id: 255
 - description: Add-Add 1/8 teaspoon black pepper to the bowl
   end_time: 418.06104389391453
   start_time: 377.92226099917764
   step_id: 268
-- description: Add-Add 2 cloves minced garlic to the bowl
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 255
+- description: Add-Add 1 teaspoon cornstarch to the bowl
+  end_time: 469.5598596833882
+  errors:
+  - description: Spill while measuring the cornstarch
+    tag: Technique Error
+  modified_description: Add-Spill while adding 1 teaspoon cornstarch to the bowl
+  start_time: 424.1197281044408
+  step_id: 254
+- description: Whisk-Whisk the contents of bowl
+  end_time: 488
+  start_time: 472
+  step_id: 260
 - description: Set-Set aside the sauce mixture
-  end_time: -1.0
-  start_time: -1.0
+  end_time: 493
+  start_time: 489
   step_id: 251
+- description: Take-Take 5 in number broccoli florets
+  end_time: 605.1229188939146
+  start_time: 500.6106162623355
+  step_id: 273
+- description: slice-slice 1/3 of the bell pepper
+  end_time: 670.2537741570723
+  start_time: 633.1443333675986
+  step_id: 263
 - description: Take-Take 2 cremini mushrooms
   end_time: 709.6352215254934
   start_time: 673.2831162623355
   step_id: 270
+- description: slice-slice mushrooms
+  end_time: 736.141964946546
+  start_time: 714.1792346833881
+  step_id: 259
 - description: Heat-Heat 2 tablespoons olive oil in a skillet over medium-high heat
   end_time: 793.6994649465461
   errors:
@@ -74,10 +88,6 @@ step_annotations:
   modified_description: Heat-Heat 2 tablespoons olive oil in a skillet over high heat
   start_time: 747.5019978412829
   step_id: 266
-- description: slice-slice mushrooms
-  end_time: 736.141964946546
-  start_time: 714.1792346833881
-  step_id: 259
 - description: Add-Add broccoli to the skillet
   end_time: 820.2062083675988
   start_time: 809.6035109991777
@@ -101,9 +111,13 @@ step_annotations:
   step_id: 261
 - description: continue cooking-continue cooking, stirring often, for 2-3 minutes,
     until vegetables are crisp-tender
-  end_time: 1036.0468333675988
+  end_time: 1063
   start_time: 876.2490373149673
   step_id: 274
+- description: Whisk-Whisk the sauce again to recombine the ingredients
+  end_time: 1051
+  start_time: 1033
+  step_id: 272
 - description: Pour-Pour the sauce into the skillet
   end_time: 1074.670945209704
   start_time: 1064.068247841283
@@ -118,17 +132,17 @@ step_annotations:
   step_id: 264
 - description: Add-Add 1/2 tablespoon minced ginger to the bowl
   end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
   start_time: -1.0
   step_id: 267
-- description: Whisk-Whisk the contents of bowl
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 260
-- description: Whisk-Whisk the sauce again to recombine the ingredients
-  end_time: -1.0
-  start_time: -1.0
-  step_id: 272
 - description: mince-mince garlic
-  end_time: 375.6502544202303
-  start_time: 369.591570209704
+  end_time: -1.0
+  errors:
+  - description: Skipped this step
+    tag: Missing Step
+  modified_description: Skipped this step
+  start_time: -1.0
   step_id: 262
