--- a/dataannotation/datastatistics/versioned_recording_annotations/v2/23_broccolistirfry/23_41.yaml
+++ b/dataannotation/datastatistics/versioned_recording_annotations/v2/23_broccolistirfry/23_41.yaml
@@ -12,16 +12,10 @@ step_annotations:
   step_id: 257
 - description: mince-mince garlic
   end_time: 240.22540450020693
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 142.36021986444536
   step_id: 262
 - description: Add-Add 2 cloves minced garlic to the bowl
   end_time: 270.8082746988824
-  errors:
-  - description: Step performed before correct order
-    tag: Order Error
   start_time: 256.3509178776904
   step_id: 255
 - description: Add-Add 1/2 tablespoon minced ginger to the bowl
@@ -64,8 +58,6 @@ step_annotations:
   - description: slice incorrectly so that all slices are still attached on one end
       and not fully forming slices
     tag: Technique Error
-  - description: Step performed before correct order
-    tag: Order Error
   modified_description: slice-slice 1/3 of the bell pepper and all the slices are
     still attached at one end
   start_time: 427.05893880484274
@@ -73,7 +65,7 @@ step_annotations:
 - description: Heat-Heat 2 tablespoons olive oil in a skillet over medium-high heat
   end_time: 500.45782728166387
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding all ingredients and whisking
     tag: Order Error
   start_time: 459.8660177452401
   step_id: 266
@@ -82,40 +74,43 @@ step_annotations:
   errors:
   - description: whisk with hand
     tag: Preparation Error
-  - description: Step performed before correct order
+  - description: Step performed after heating the pan and before adding all ingredients
     tag: Order Error
   modified_description: Whisk-Whisk the contents of bowl with hand
   start_time: 514.915184102856
   step_id: 260
 - description: slice-slice mushrooms
   end_time: 572.7446113876241
+  errors:
+  - description: Step performed after heating the pan
+    tag: Order Error
   start_time: 543.82989774524
   step_id: 259
 - description: Set-Set aside the sauce mixture
   end_time: 594.9866988048427
   errors:
-  - description: Step performed before correct order
+  - description: Step performed after heating the pan and before adding all ingredients
     tag: Order Error
   start_time: 590.538281321399
   step_id: 251
 - description: Add-Add 1 tablespoon honey to the bowl
   end_time: 630.5740386723922
   errors:
-  - description: Step performed after correct order
+  - description: Step performed after whisking and heating the pan
     tag: Order Error
   start_time: 595.5427509902731
   step_id: 252
 - description: Add-Add broccoli to the skillet
   end_time: 660.6008566856374
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding all ingredients to the sauce mixture
     tag: Order Error
   start_time: 656.1524392021937
   step_id: 265
 - description: Add-add sliced mushrooms to the skillet
   end_time: 668.9416394670943
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding all ingredients to the sauce mixture
     tag: Order Error
   start_time: 661.7129610564983
   step_id: 258
@@ -125,7 +120,7 @@ step_annotations:
   errors:
   - description: cook only for 20- 30 sec instead of 4 mins
     tag: Timing Error
-  - description: Step performed before correct order
+  - description: Step performed before adding all ingredients to the sauce mixture
     tag: Order Error
   modified_description: cook-cook, stirring often, for 20-30 sec. If the pan gets
     too hot on medium-high, turn the heat down to medium
@@ -134,7 +129,7 @@ step_annotations:
 - description: Add-Add bell pepper to the skillet
   end_time: 698.412
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding all ingredients to the sauce mixture
     tag: Order Error
   start_time: 693.9639878114652
   step_id: 261
@@ -142,7 +137,9 @@ step_annotations:
     until vegetables are crisp-tender
   end_time: 743.4526323147765
   errors:
-  - description: Step performed before correct order
+  - description: cook only for 20- 30 sec instead of 4 mins
+    tag: Timing Error
+  - description: Step performed before adding all ingredients to the sauce mixture
     tag: Order Error
   start_time: 698.616
   step_id: 274
@@ -151,7 +148,7 @@ step_annotations:
   errors:
   - description: use a spoon instead of whisker
     tag: Preparation Error
-  - description: Step performed before correct order
+  - description: Step performed before adding all ingredients to the sauce mixture
     tag: Order Error
   modified_description: Whisk-Whisk the sauce again with spoon to recombine the ingredients
   start_time: 726.2150145664322
@@ -159,21 +156,21 @@ step_annotations:
 - description: Pour-Pour the sauce into the skillet
   end_time: 752.3494672816639
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding all ingredients to the sauce mixture
     tag: Order Error
   start_time: 744.0086845002069
   step_id: 256
 - description: cook-cook, stirring, for 1 minute until the sauce thickens
   end_time: 832.4209819836506
   errors:
-  - description: Step performed before correct order
+  - description: Step performed before adding all ingredients to the sauce mixture
     tag: Order Error
   start_time: 753.4615716525248
   step_id: 264
 - description: Add-Add 1 teaspoon cornstarch to the bowl
   end_time: 810.1788945664321
   errors:
-  - description: Step performed after correct order
+  - description: Step performed after cooking
     tag: Order Error
   start_time: 778.4839199968957
   step_id: 254
